# LinkVault

backend/: Makefile  pyproject.toml
backend/backend/: settings.py
backend/bookmarks/: admin.py  models.py  serializers.py  views.py
backend/bookmarks/migrations/: 0001_initial.py
