[tool.poetry]
name = "linkvault-backend"
version = "0.1.0"
description = "Backend for LinkVault bookmark manager"
authors = ["Dinesh Ojha"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.6"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
django-cors-headers = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
